[QUBES][#461][COM_COLLECTIONS] Prevents icon from overlapping text.

--- a/core/components/com_collections/site/assets/css/collections.css
+++ b/core/components/com_collections/site/assets/css/collections.css
@@ -454,6 +454,7 @@
 	}
 	.btn.unfollow:before {
 		content: "\f070";
+		margin-left: 3px;
 	}
 	.attribution p span {
 		margin-right: 1em;
